<resources>
    <string name="app_name">Student Manager</string>
    <string name="registration_form">Registration Form</string>
    <string name="student_s_name">Student\'s Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="school_s_name">School\'s Name</string>
    <string name="class_name">Class Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender : </string>
    <string name="sign_in">Create Account</string>
    <string name="id">Id</string>
</resources>
