<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/colorActivityBackground"
    tools:context=".StudentRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/registration_form"
            android:gravity="center"
            android:textColor="@color/colorTheme"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="32sp"
            android:background="@color/colorPrimaryDark"
            />

        <EditText
            android:id="@+id/std_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/student_s_name"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:inputType="text|textCapWords"
            android:layout_marginBottom="6dp"/>
        <requestFocus />

        <EditText
            android:id="@+id/fathers_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/father_s_name"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:inputType="text|textCapWords"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/mothers_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/mother_s_name"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:inputType="text|textCapWords"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/address"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:background="@color/colorWhite"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/contact_no"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/contact_number"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:inputType="phone"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/schools_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/school_s_name"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:inputType="text|textCapWords"
            android:layout_marginBottom="6dp"/>

        <EditText
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/class_name"
            android:padding="4dp"
            android:textSize="@dimen/form_text_size"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:inputType="text|textCapWords"
            android:layout_marginBottom="6dp"/>


            <TextView
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/date_of_birth"
                android:padding="4dp"
                android:textSize="@dimen/form_text_size"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:layout_marginBottom="6dp"
                android:inputType="none"
                android:onClick="saveDate"
                android:clickable="true"
                />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_marginBottom="2dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="22sp"
                android:layout_marginRight="8dp"
                android:padding="4dp"/>

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:checked="true"
                    android:textSize="22sp"
                    android:padding="4dp"
                    android:layout_marginRight="8dp"/>
                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textSize="22sp"
                    android:padding="4dp"/>
            </RadioGroup>

        </LinearLayout>
        <Button
            android:id="@+id/register_button"
            android:onClick="saveToDataBase"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="Save"
            android:textColor="@color/colorTheme"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>
