<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/colorActivityBackground"

    tools:context="com.example.nazmul.studentManagement.ShowInformation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="Student Name"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="Father Name"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="Mother Name"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="Address"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Gender"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="Contact Number"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="School Name"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:text="Class Name"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Date Of Barth"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/text_color"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:text="Update"
                android:id="@+id/btnUpdate"
                android:background="@color/colorPrimaryDark"
                android:onClick="update"

                android:textColor="@color/colorTheme"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/txtNameIn"
                android:text="@string/student_s_name"/>
            <TextView

                android:id="@+id/txtFatherNameIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:text="@string/father_s_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/txtMotherNameIn"

                android:text="@string/mother_s_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/addressIn"

                android:text="@string/address"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/genderIn"

                android:text="@string/gender"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/txtContactNoIn"
                android:text="@string/contact_number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/schoolNameIn"

                android:text="@string/school_s_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/classNameIn"

                android:text="@string/class_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="@dimen/StudentRegistrationMarginBottom"
                android:padding="2dp"
                android:id="@+id/dobIn"
                android:text="@string/date_of_birth"/>

            <Button
                android:text="Delete"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:id="@+id/btnDelete"
                android:onClick="delete"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorTheme"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginLeft="13dp"
                />
            </LinearLayout>
    </LinearLayout>


</LinearLayout>
